{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 67,
  "lineage": "4fe1f0df-0012-af60-6831-488d99b2f53a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099c314fa3ca0189a",
            "association_id": "eipassoc-064cc7da5b425caa6",
            "domain": "vpc",
            "id": "eipalloc-099c314fa3ca0189a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-092aff651a31577c8",
            "private_dns": "ip-10-0-1-41.ec2.internal",
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-23-22-184-177.compute-1.amazonaws.com",
            "public_ip": "23.22.184.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fanc_nat_eip_a_stg"
            },
            "tags_all": {
              "Name": "fanc_nat_eip_a_stg"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046a2b408830b7601",
            "association_id": "eipassoc-02548fc7c5d2d85c9",
            "domain": "vpc",
            "id": "eipalloc-046a2b408830b7601",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fb69d674a8b35c05",
            "private_dns": "ip-10-0-3-39.ec2.internal",
            "private_ip": "10.0.3.39",
            "public_dns": "ec2-44-194-11-4.compute-1.amazonaws.com",
            "public_ip": "44.194.11.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fanc_nat_eip_b_stg"
            },
            "tags_all": {
              "Name": "fanc_nat_eip_b_stg"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f34c5ae932e6f0e4",
            "arn": "arn:aws:ec2:us-east-1:757245745517:instance/i-08bd6b76555796afd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08bd6b76555796afd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fanc-stg-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071da679a5c620537",
            "private_dns": "ip-10-0-1-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-18-204-231-140.compute-1.amazonaws.com",
            "public_ip": "18.204.231.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-073007b9df210efb0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f2088034734a8e2",
            "tags": {
              "Name": "bastion_stg"
            },
            "tags_all": {
              "Name": "bastion_stg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07be97ffa822e8c2d"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public_subnet_a",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stg_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:internet-gateway/igw-054f4502fdedfa2ea",
            "id": "igw-054f4502fdedfa2ea",
            "owner_id": "757245745517",
            "tags": {
              "Environment": "staging",
              "Name": "fanc-stg-igw"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "fanc-stg-igw"
            },
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099c314fa3ca0189a",
            "association_id": "eipassoc-064cc7da5b425caa6",
            "connectivity_type": "public",
            "id": "nat-02f5ccdbd29519b0b",
            "network_interface_id": "eni-092aff651a31577c8",
            "private_ip": "10.0.1.41",
            "public_ip": "23.22.184.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f2088034734a8e2",
            "tags": {
              "Name": "fanc_nat_gateway_a_stg"
            },
            "tags_all": {
              "Name": "fanc_nat_gateway_a_stg"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046a2b408830b7601",
            "association_id": "eipassoc-02548fc7c5d2d85c9",
            "connectivity_type": "public",
            "id": "nat-0fb5cfbba4d33000a",
            "network_interface_id": "eni-0fb69d674a8b35c05",
            "private_ip": "10.0.3.39",
            "public_ip": "44.194.11.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057e5e8ad9ec511d9",
            "tags": {
              "Name": "fanc_nat_gateway_b_stg"
            },
            "tags_all": {
              "Name": "fanc_nat_gateway_b_stg"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:network-acl/acl-0ef875b6654023515",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ef875b6654023515",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "757245745517",
            "subnet_ids": [
              "subnet-0271a1f3502f43dcf",
              "subnet-057e5e8ad9ec511d9",
              "subnet-05a4eaafa51c90f8b",
              "subnet-07f2088034734a8e2"
            ],
            "tags": {
              "Name": "main_stg"
            },
            "tags_all": {
              "Name": "main_stg"
            },
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c4002a5f12b72896",
            "network_acl_id": "acl-0ef875b6654023515",
            "subnet_id": "subnet-05a4eaafa51c90f8b"
          },
          "dependencies": [
            "aws_network_acl.main",
            "aws_subnet.private_subnet_a",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0ab4a6447fb890d12",
            "network_acl_id": "acl-0ef875b6654023515",
            "subnet_id": "subnet-0271a1f3502f43dcf"
          },
          "dependencies": [
            "aws_network_acl.main",
            "aws_subnet.private_subnet_b",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c37ec8b3ce57861e",
            "network_acl_id": "acl-0ef875b6654023515",
            "subnet_id": "subnet-07f2088034734a8e2"
          },
          "dependencies": [
            "aws_network_acl.main",
            "aws_subnet.public_subnet_a",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0684543e718b74202",
            "network_acl_id": "acl-0ef875b6654023515",
            "subnet_id": "subnet-057e5e8ad9ec511d9"
          },
          "dependencies": [
            "aws_network_acl.main",
            "aws_subnet.public_subnet_b",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2741201645",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ef875b6654023515",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.main",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4123433074",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ef875b6654023515",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.main",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_https_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1758034180",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ef875b6654023515",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.main",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2309471657",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ef875b6654023515",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.main",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:route-table/rtb-07cbd31e13aa79c63",
            "id": "rtb-07cbd31e13aa79c63",
            "owner_id": "757245745517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02f5ccdbd29519b0b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fanc_private_route_table_a_stg"
            },
            "tags_all": {
              "Name": "fanc_private_route_table_a_stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_nat_gateway.nat_gateway_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:route-table/rtb-0e887d4c38ef13c32",
            "id": "rtb-0e887d4c38ef13c32",
            "owner_id": "757245745517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fb5cfbba4d33000a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fanc_private_route_table_b_stg"
            },
            "tags_all": {
              "Name": "fanc_private_route_table_b_stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_nat_gateway.nat_gateway_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:route-table/rtb-0fb3d7a7dd6e938c8",
            "id": "rtb-0fb3d7a7dd6e938c8",
            "owner_id": "757245745517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054f4502fdedfa2ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fanc_public_route_table_stg"
            },
            "tags_all": {
              "Name": "fanc_public_route_table_stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.stg_igw",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f58e91923f76127",
            "route_table_id": "rtb-07cbd31e13aa79c63",
            "subnet_id": "subnet-05a4eaafa51c90f8b"
          },
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_nat_gateway.nat_gateway_a",
            "aws_route_table.private_a",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fc58eb9f151ca33",
            "route_table_id": "rtb-0e887d4c38ef13c32",
            "subnet_id": "subnet-0271a1f3502f43dcf"
          },
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_nat_gateway.nat_gateway_b",
            "aws_route_table.private_b",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07623c98a3054df7a",
            "route_table_id": "rtb-0fb3d7a7dd6e938c8",
            "subnet_id": "subnet-07f2088034734a8e2"
          },
          "dependencies": [
            "aws_internet_gateway.stg_igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_a",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095660fe3fc616deb",
            "route_table_id": "rtb-0fb3d7a7dd6e938c8",
            "subnet_id": "subnet-057e5e8ad9ec511d9"
          },
          "dependencies": [
            "aws_internet_gateway.stg_igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_b",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:security-group/sg-07be97ffa822e8c2d",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07be97ffa822e8c2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "757245745517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_stg"
            },
            "tags_all": {
              "Name": "allow_ssh_stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:security-group/sg-07c51a4ae096e218f",
            "description": "Allow MySQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c51a4ae096e218f",
            "ingress": [
              {
                "cidr_blocks": [
                  "18.204.231.140/32",
                  "60.38.109.203/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": "",
            "owner_id": "757245745517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mysql_stg"
            },
            "tags_all": {
              "Name": "allow_mysql_stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:subnet/subnet-05a4eaafa51c90f8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a4eaafa51c90f8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757245745517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fanc_private_subnet_a_stg"
            },
            "tags_all": {
              "Name": "fanc_private_subnet_a_stg"
            },
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:subnet/subnet-0271a1f3502f43dcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0271a1f3502f43dcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757245745517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fanc_private_subnet_b_stg"
            },
            "tags_all": {
              "Name": "fanc_private_subnet_b_stg"
            },
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:subnet/subnet-07f2088034734a8e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f2088034734a8e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "757245745517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fanc_public_subnet_a_stg"
            },
            "tags_all": {
              "Name": "fanc_public_subnet_a_stg"
            },
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:subnet/subnet-057e5e8ad9ec511d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057e5e8ad9ec511d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "757245745517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fanc_public_subnet_b_stg"
            },
            "tags_all": {
              "Name": "fanc_public_subnet_b_stg"
            },
            "vpc_id": "vpc-0e95c2859329c5b7b"
          },
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stg_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757245745517:vpc/vpc-0e95c2859329c5b7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044b8e248fbd88dff",
            "default_route_table_id": "rtb-02ede615ca66c7f1a",
            "default_security_group_id": "sg-078a893304e2acd9d",
            "dhcp_options_id": "dopt-0f5ee1cc75ccaf891",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e95c2859329c5b7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ede615ca66c7f1a",
            "owner_id": "757245745517",
            "tags": {
              "Environment": "staging",
              "Name": "fanc-stg-default-vpc"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "fanc-stg-default-vpc"
            }
          }
        }
      ]
    }
  ]
}